Fixed spacing issued with github link on Meet the Team.

--- a/css/index.css
+++ b/css/index.css
@@ -427,6 +427,12 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+.card_bottom.who_cards_card_bottom h2 {
+  margin-bottom: 15px;
+}
+.card_bottom.who_cards_card_bottom a {
+  padding-bottom: 2px;
+}
 .card_bottom.who_cards_card_bottom p,
 .card_bottom.who_cards_card_bottom a {
   width: 100%;
