--- a/less/comps/cards.less
+++ b/less/comps/cards.less
@@ -42,6 +42,12 @@
 
         .flex(@dir: column, @jc: space-between);
 
+        &.who_cards_card_bottom h2 {
+            margin-bottom: 15px;
+        }
+        &.who_cards_card_bottom a {
+            padding-bottom: 2px;
+        }
         &.who_cards_card_bottom p, &.who_cards_card_bottom a {
             width: 100%;
             height: 30px;
